@@ -173,17 +173,22 @@ pencil_error_t pencil_layouter_get_object_id_at_pos ( pencil_layouter_t *this_,
                                                       double x,
                                                       double y,
                                                       double snap_distance,
-                                                      bool dereference,
-                                                      data_id_t *out_selected_object_id,
-                                                      data_id_t *out_surrounding_object_id )
+                                                      data_id_t *out_selected_visible_object_id,
+                                                      data_id_t *out_selected_model_object_id,
+                                                      data_id_t *out_surrounding_visible_object_id,
+                                                      data_id_t *out_surrounding_model_object_id )
 {
     TRACE_BEGIN();
-    assert( NULL != out_selected_object_id );
-    assert( NULL != out_surrounding_object_id );
+    assert( NULL != out_selected_visible_object_id );
+    assert( NULL != out_selected_model_object_id );
+    assert( NULL != out_surrounding_visible_object_id );
+    assert( NULL != out_surrounding_model_object_id );
 
     pencil_error_t result = PENCIL_ERROR_NONE;
-    data_id_reinit_void( out_selected_object_id );
-    data_id_reinit_void( out_surrounding_object_id );
+    data_id_reinit_void( out_selected_visible_object_id );
+    data_id_reinit_void( out_selected_model_object_id );
+    data_id_reinit_void( out_surrounding_visible_object_id );
+    data_id_reinit_void( out_surrounding_model_object_id );
     data_diagram_t *diag;
     diag = pencil_input_data_get_diagram_ptr( (*this_).input_data );
 
@@ -204,25 +209,35 @@ pencil_error_t pencil_layouter_get_object_id_at_pos ( pencil_layouter_t *this_,
                     data_relationship_t *current_relation;
                     current_relation = pencil_input_data_get_relationship_ptr ( (*this_).input_data, rel_index );
 
-                    data_id_reinit( out_selected_object_id, DATA_TABLE_RELATIONSHIP, data_relationship_get_id( current_relation ) );
+                    data_id_reinit( out_selected_visible_object_id, DATA_TABLE_RELATIONSHIP, data_relationship_get_id( current_relation ) );
+                    data_id_reinit( out_selected_model_object_id, DATA_TABLE_RELATIONSHIP, data_relationship_get_id( current_relation ) );
                 }
             }
         }
 
         /* determine a classifier at the given position */
-        if ( ! data_id_is_valid( out_selected_object_id ) )
+        if ( ! data_id_is_valid( out_selected_model_object_id ) )
         {
-            result = pencil_layouter_private_get_classifier_id_at_pos( this_, x, y, dereference, out_selected_object_id, out_surrounding_object_id );
+            result = pencil_layouter_private_get_classifier_id_at_pos( this_,
+                                                                       x,
+                                                                       y,
+                                                                       out_selected_visible_object_id,
+                                                                       out_selected_model_object_id,
+                                                                       out_surrounding_visible_object_id,
+                                                                       out_surrounding_model_object_id
+                                                                     );
         }
 
         /* fallback: return the diagram */
-        if ( ! data_id_is_valid( out_selected_object_id ) )
+        if ( ! data_id_is_valid( out_selected_model_object_id ) )
         {
-            data_id_reinit( out_selected_object_id, DATA_TABLE_DIAGRAM, data_diagram_get_id(diag) );
+            data_id_reinit( out_selected_visible_object_id, DATA_TABLE_DIAGRAM, data_diagram_get_id(diag) );
+            data_id_reinit( out_selected_model_object_id, DATA_TABLE_DIAGRAM, data_diagram_get_id(diag) );
         }
-        if ( ! data_id_is_valid( out_surrounding_object_id ) )
+        if ( ! data_id_is_valid( out_surrounding_model_object_id ) )
         {
-            data_id_reinit( out_surrounding_object_id, DATA_TABLE_DIAGRAM, data_diagram_get_id(diag) );
+            data_id_reinit( out_surrounding_visible_object_id, DATA_TABLE_DIAGRAM, data_diagram_get_id(diag) );
+            data_id_reinit( out_surrounding_model_object_id, DATA_TABLE_DIAGRAM, data_diagram_get_id(diag) );
         }
     }
     else
@@ -238,13 +253,16 @@ pencil_error_t pencil_layouter_get_object_id_at_pos ( pencil_layouter_t *this_,
 pencil_error_t pencil_layouter_private_get_classifier_id_at_pos ( pencil_layouter_t *this_,
                                                                   double x,
                                                                   double y,
-                                                                  bool dereference,
-                                                                  data_id_t *out_selected_object_id,
-                                                                  data_id_t *out_surrounding_object_id )
+                                                                  data_id_t *out_selected_visible_object_id,
+                                                                  data_id_t *out_selected_model_object_id,
+                                                                  data_id_t *out_surrounding_visible_object_id,
+                                                                  data_id_t *out_surrounding_model_object_id )
 {
     TRACE_BEGIN();
-    assert( NULL != out_selected_object_id );
-    assert( NULL != out_surrounding_object_id );
+    assert( NULL != out_selected_visible_object_id );
+    assert( NULL != out_selected_model_object_id );
+    assert( NULL != out_surrounding_visible_object_id );
+    assert( NULL != out_surrounding_model_object_id );
 
     pencil_error_t result = PENCIL_ERROR_NONE;
 
@@ -294,33 +312,22 @@ pencil_error_t pencil_layouter_private_get_classifier_id_at_pos ( pencil_layoute
                                 if ( geometry_rectangle_contains( &feature_bounds, x, y ) )
                                 {
                                     /* feature is found */
-                                    data_id_reinit( out_selected_object_id, DATA_TABLE_FEATURE, data_feature_get_id( the_feature ) );
+                                    data_id_reinit( out_selected_visible_object_id, DATA_TABLE_FEATURE, data_feature_get_id( the_feature ) );
+                                    data_id_reinit( out_selected_model_object_id, DATA_TABLE_FEATURE, data_feature_get_id( the_feature ) );
                                 }
                                 linenumber ++;
                                 geometry_rectangle_destroy( &feature_bounds );
                             }
                         }
                         /* surrounding classifier is found */
-                        if ( dereference )
-                        {
-                            data_id_reinit( out_surrounding_object_id, DATA_TABLE_CLASSIFIER, data_classifier_get_id( classifier ) );
-                        }
-                        else
-                        {
-                            data_id_reinit( out_surrounding_object_id, DATA_TABLE_DIAGRAMELEMENT, data_diagramelement_get_id( diagramelement ) );
-                        }
+                        data_id_reinit( out_surrounding_visible_object_id, DATA_TABLE_DIAGRAMELEMENT, data_diagramelement_get_id( diagramelement ) );
+                        data_id_reinit( out_surrounding_model_object_id, DATA_TABLE_CLASSIFIER, data_classifier_get_id( classifier ) );
                     }
                     else
                     {
                         /* classifier is found */
-                        if ( dereference )
-                        {
-                            data_id_reinit( out_selected_object_id, DATA_TABLE_CLASSIFIER, data_classifier_get_id( classifier ) );
-                        }
-                        else
-                        {
-                            data_id_reinit( out_selected_object_id, DATA_TABLE_DIAGRAMELEMENT, data_diagramelement_get_id( diagramelement ) );
-                        }
+                        data_id_reinit( out_selected_visible_object_id, DATA_TABLE_DIAGRAMELEMENT, data_diagramelement_get_id( diagramelement ) );
+                        data_id_reinit( out_selected_model_object_id, DATA_TABLE_CLASSIFIER, data_classifier_get_id( classifier ) );
                     }
                 }
             }
