@@ -15,6 +15,8 @@
   [ ] reset-selection shall select everything if nothing is selected
   [ ] the type-dropdown box shall appear over the window - without this nasty scrolling
   [ ] The default-names of new objects shall be more unique, less duplicate name errors
+  [ ] The default-names of new relatoinships and features shall match their type
+  [ ] New objects shall have the type of previously type-changed objects (arrows, features and classifiers)
   @gui+ctrl
   [ ] When undoing/redoing things, switch to a diagram where you see the changes
   @gui+pencil
